[gd_scene load_steps=13 format=3 uid="uid://dxssqfgm75gwx"]

[ext_resource type="Script" path="res://tab_container.gd" id="1_pjrsu"]
[ext_resource type="Script" path="res://scroll_container.gd" id="2_lje62"]
[ext_resource type="Texture2D" uid="uid://bv7jgajhhau2r" path="res://ground_walls/Stone.png" id="6_aggcn"]
[ext_resource type="Texture2D" uid="uid://kq152i03ag18" path="res://ground_walls/Bricks-3.png.png" id="7_33v51"]
[ext_resource type="Texture2D" uid="uid://eyn4a35obc3e" path="res://hazards/Lava.png" id="7_b3me1"]
[ext_resource type="Texture2D" uid="uid://b5m05i75vitx5" path="res://Decor/Jack o Lantern.png" id="7_odyyf"]
[ext_resource type="Texture2D" uid="uid://c5vjke2hstjr3" path="res://hazards/Medium Spikes.png" id="7_rauv7"]
[ext_resource type="Texture2D" uid="uid://efdftgp8ywix" path="res://ground_walls/Beige Bricks.png" id="8_2hewr"]
[ext_resource type="Texture2D" uid="uid://b8o3gnifw238j" path="res://backgrounds/game_background_3. 2.png" id="8_t06l3"]
[ext_resource type="Texture2D" uid="uid://ce0yneey4cfdc" path="res://ground_walls/Dark Gray Bricks.png" id="9_q84sy"]
[ext_resource type="Texture2D" uid="uid://bc8lf1h2su71w" path="res://interactive/Coin.png" id="10_yjolw"]
[ext_resource type="Texture2D" uid="uid://cj0r8vg2u4dso" path="res://interactive/Ladder.png" id="12_fqggb"]

[node name="item_select" type="CanvasLayer"]

[node name="TabContainer" type="TabContainer" parent="."]
offset_left = 1.0
offset_top = 64.0
offset_right = 294.0
offset_bottom = 340.0
tab_alignment = 1
current_tab = 0
script = ExtResource("1_pjrsu")
metadata/_edit_group_ = true

[node name="Ground and Wall" type="TabBar" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Ground and Wall"]
layout_mode = 0
offset_left = 9.0
offset_top = 2.0
offset_right = 289.0
offset_bottom = 240.0
script = ExtResource("2_lje62")

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Ground and Wall/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Ground and Wall/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="stone2" type="Button" parent="TabContainer/Ground and Wall/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Stone"
icon = ExtResource("6_aggcn")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="beige bricks2" type="Button" parent="TabContainer/Ground and Wall/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Beige Bricks"
icon = ExtResource("7_33v51")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="brown bricks2" type="Button" parent="TabContainer/Ground and Wall/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Brown Bricks"
icon = ExtResource("8_2hewr")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="dark gray bricks 2" type="Button" parent="TabContainer/Ground and Wall/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Dark Gray Bricks"
icon = ExtResource("9_q84sy")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Hazards" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Hazards"]
layout_mode = 0
offset_left = 11.0
offset_top = 4.0
offset_right = 716.0
offset_bottom = 76.0
script = ExtResource("2_lje62")

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Hazards/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Hazards/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="lava2" type="Button" parent="TabContainer/Hazards/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Lava"
icon = ExtResource("7_b3me1")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="MedSpikes" type="Button" parent="TabContainer/Hazards/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Med. Spikes"
icon = ExtResource("7_rauv7")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Decor" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Decor"]
layout_mode = 0
offset_left = 6.0
offset_top = 1.0
offset_right = 718.0
offset_bottom = 79.0
script = ExtResource("2_lje62")

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Decor/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Decor/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="JackOLantern" type="Button" parent="TabContainer/Decor/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Jack O Lantern"
icon = ExtResource("7_odyyf")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Sprites" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Sprites"]
layout_mode = 0
offset_left = 6.0
offset_top = 1.0
offset_right = 721.0
offset_bottom = 79.0
script = ExtResource("2_lje62")

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Sprites/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Sprites/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Background" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Background"]
layout_mode = 0
offset_left = 5.0
offset_top = 2.0
offset_right = 722.0
offset_bottom = 77.0
script = ExtResource("2_lje62")

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Background/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Background/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="NightForest" type="Button" parent="TabContainer/Background/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Forest Nighttime"
icon = ExtResource("8_t06l3")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Interactives" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Interactives"]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 721.0
offset_bottom = 77.0
script = ExtResource("2_lje62")

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Interactives/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Interactives/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Coin" type="Button" parent="TabContainer/Interactives/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Coin"
icon = ExtResource("10_yjolw")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Ladder" type="Button" parent="TabContainer/Interactives/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Ladder"
icon = ExtResource("12_fqggb")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Chest" type="Button" parent="TabContainer/Interactives/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Chest"
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[connection signal="mouse_entered" from="TabContainer" to="TabContainer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer" to="TabContainer" method="_on_mouse_exited"]
[connection signal="pressed" from="TabContainer/Ground and Wall/ScrollContainer/VBoxContainer/HBoxContainer/stone2" to="TabContainer" method="_on_stone_2_pressed"]
[connection signal="pressed" from="TabContainer/Ground and Wall/ScrollContainer/VBoxContainer/HBoxContainer/beige bricks2" to="TabContainer" method="_on_beige_bricks_2_pressed"]
[connection signal="pressed" from="TabContainer/Ground and Wall/ScrollContainer/VBoxContainer/HBoxContainer/brown bricks2" to="TabContainer" method="_on_brown_bricks_2_pressed"]
[connection signal="pressed" from="TabContainer/Ground and Wall/ScrollContainer/VBoxContainer/HBoxContainer/dark gray bricks 2" to="TabContainer" method="_on_dark_gray_bricks_2_pressed"]
[connection signal="pressed" from="TabContainer/Hazards/ScrollContainer/VBoxContainer/HBoxContainer/lava2" to="TabContainer" method="_on_lava_2_pressed"]
[connection signal="pressed" from="TabContainer/Hazards/ScrollContainer/VBoxContainer/HBoxContainer/MedSpikes" to="TabContainer" method="_on_med_spikes_pressed"]
[connection signal="pressed" from="TabContainer/Decor/ScrollContainer/VBoxContainer/HBoxContainer/JackOLantern" to="TabContainer" method="_on_jack_o_lantern_pressed"]
[connection signal="pressed" from="TabContainer/Background/ScrollContainer/VBoxContainer/HBoxContainer/NightForest" to="TabContainer" method="_on_night_forest_pressed"]
[connection signal="pressed" from="TabContainer/Interactives/ScrollContainer/VBoxContainer/HBoxContainer/Coin" to="TabContainer" method="_on_coin_pressed"]
[connection signal="pressed" from="TabContainer/Interactives/ScrollContainer/VBoxContainer/HBoxContainer/Ladder" to="TabContainer" method="_on_ladder_pressed"]
[connection signal="pressed" from="TabContainer/Interactives/ScrollContainer/VBoxContainer/HBoxContainer/Chest" to="TabContainer" method="_on_chest_pressed"]
