[gd_scene load_steps=18 format=3 uid="uid://c8nd67wu05kv3"]

[ext_resource type="Texture2D" uid="uid://bv7jgajhhau2r" path="res://assets/ground_walls/Stone.png" id="1_cx0tv"]
[ext_resource type="Script" path="res://scripts/tab_container.gd" id="1_x61br"]
[ext_resource type="Texture2D" uid="uid://kq152i03ag18" path="res://assets/ground_walls/Bricks-3.png.png" id="2_wud1s"]
[ext_resource type="Texture2D" uid="uid://efdftgp8ywix" path="res://assets/ground_walls/Beige Bricks.png" id="3_4iq2o"]
[ext_resource type="Texture2D" uid="uid://ce0yneey4cfdc" path="res://assets/ground_walls/Dark Gray Bricks.png" id="4_hq0b3"]
[ext_resource type="Texture2D" uid="uid://eyn4a35obc3e" path="res://assets/hazards/Lava.png" id="5_j4304"]
[ext_resource type="Texture2D" uid="uid://cparvpn3jpvka" path="res://assets/hazards/Small Spikes.png" id="6_n6j0o"]
[ext_resource type="Texture2D" uid="uid://c5vjke2hstjr3" path="res://assets/hazards/Medium Spikes.png" id="7_jc3v8"]
[ext_resource type="Texture2D" uid="uid://6ep81gwfwa0j" path="res://assets/hazards/Big Spike.png" id="8_wywxn"]
[ext_resource type="Texture2D" uid="uid://batxptd4pen1m" path="res://assets/Decor/Bottom Left Spider Web.png" id="9_8x7tw"]
[ext_resource type="Texture2D" uid="uid://b5m05i75vitx5" path="res://assets/Decor/Jack o Lantern.png" id="9_u7k5r"]
[ext_resource type="Texture2D" uid="uid://dp5c6e8452lo4" path="res://assets/Decor/Bottom Right Spider Web.png" id="10_7sy57"]
[ext_resource type="Texture2D" uid="uid://iiln0nowibo2" path="res://assets/Decor/Top Left Spider Web.png" id="11_il5wq"]
[ext_resource type="Texture2D" uid="uid://sn38dwnnki6h" path="res://assets/Decor/Top Right Spider Web.png" id="12_unjd5"]
[ext_resource type="Texture2D" uid="uid://bc8lf1h2su71w" path="res://assets/interactive/Coin.png" id="14_hdwix"]
[ext_resource type="Texture2D" uid="uid://curxra5askb1" path="res://assets/interactive/Treasure Chest_1.png" id="15_khxaa"]
[ext_resource type="Texture2D" uid="uid://cj0r8vg2u4dso" path="res://assets/interactive/Ladder.png" id="16_h12mi"]

[node name="inventory" type="CanvasLayer"]

[node name="TabContainer" type="TabContainer" parent="."]
offset_top = 61.0
offset_right = 139.0
offset_bottom = 276.0
current_tab = 2
script = ExtResource("1_x61br")
metadata/_edit_group_ = true

[node name="Walls" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Walls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="TabContainer/Walls/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="Stone" type="Button" parent="TabContainer/Walls/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Stone"
icon = ExtResource("1_cx0tv")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Bricks" type="OptionButton" parent="TabContainer/Walls/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
selected = 0
item_count = 3
popup/item_0/text = "Bricks"
popup/item_0/icon = ExtResource("2_wud1s")
popup/item_1/text = "Bricks"
popup/item_1/icon = ExtResource("3_4iq2o")
popup/item_1/id = 1
popup/item_2/text = "Bricks"
popup/item_2/icon = ExtResource("4_hq0b3")
popup/item_2/id = 2

[node name="Hazards" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Hazards"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="TabContainer/Hazards/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
columns = 2

[node name="Lava" type="Button" parent="TabContainer/Hazards/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Lava"
icon = ExtResource("5_j4304")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Spikes" type="OptionButton" parent="TabContainer/Hazards/ScrollContainer/GridContainer"]
layout_mode = 2
alignment = 1
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
selected = 0
item_count = 3
popup/item_0/text = "sm. Spike"
popup/item_0/icon = ExtResource("6_n6j0o")
popup/item_1/text = "Med. Spike"
popup/item_1/icon = ExtResource("7_jc3v8")
popup/item_1/id = 1
popup/item_2/text = "Lg. Spike"
popup/item_2/icon = ExtResource("8_wywxn")
popup/item_2/id = 2

[node name="Decor" type="TabBar" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Decor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="TabContainer/Decor/ScrollContainer"]
layout_mode = 2
columns = 3

[node name="Jack o Lantern" type="Button" parent="TabContainer/Decor/ScrollContainer/GridContainer"]
layout_mode = 2
text = "JackoLantern"
icon = ExtResource("9_u7k5r")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Spider Webs" type="OptionButton" parent="TabContainer/Decor/ScrollContainer/GridContainer"]
layout_mode = 2
alignment = 1
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
selected = 0
item_count = 4
popup/item_0/text = "Btm. L Web"
popup/item_0/icon = ExtResource("9_8x7tw")
popup/item_1/text = "Btm. R Web"
popup/item_1/icon = ExtResource("10_7sy57")
popup/item_1/id = 1
popup/item_2/text = "Top L Web"
popup/item_2/icon = ExtResource("11_il5wq")
popup/item_2/id = 2
popup/item_3/text = "Top R Web"
popup/item_3/icon = ExtResource("12_unjd5")
popup/item_3/id = 3

[node name="Interactive" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Interactive"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="TabContainer/Interactive/ScrollContainer"]
layout_mode = 2
columns = 2

[node name="Coin" type="Button" parent="TabContainer/Interactive/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Coin"
icon = ExtResource("14_hdwix")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Chest" type="Button" parent="TabContainer/Interactive/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Chest"
icon = ExtResource("15_khxaa")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Ladder" type="Button" parent="TabContainer/Interactive/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Ladder"
icon = ExtResource("16_h12mi")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[connection signal="pressed" from="TabContainer/Walls/ScrollContainer/GridContainer/Stone" to="TabContainer" method="_on_stone_pressed"]
[connection signal="item_selected" from="TabContainer/Walls/ScrollContainer/GridContainer/Bricks" to="TabContainer" method="_on_bricks_item_selected"]
[connection signal="pressed" from="TabContainer/Walls/ScrollContainer/GridContainer/Bricks" to="TabContainer" method="_on_bricks_pressed"]
[connection signal="pressed" from="TabContainer/Hazards/ScrollContainer/GridContainer/Lava" to="TabContainer" method="_on_lava_pressed"]
[connection signal="item_selected" from="TabContainer/Hazards/ScrollContainer/GridContainer/Spikes" to="TabContainer" method="_on_spikes_item_selected"]
[connection signal="pressed" from="TabContainer/Hazards/ScrollContainer/GridContainer/Spikes" to="TabContainer" method="_on_spikes_pressed"]
[connection signal="pressed" from="TabContainer/Decor/ScrollContainer/GridContainer/Jack o Lantern" to="TabContainer" method="_on_jack_o_lantern_pressed"]
[connection signal="item_selected" from="TabContainer/Decor/ScrollContainer/GridContainer/Spider Webs" to="TabContainer" method="_on_spider_webs_item_selected"]
[connection signal="pressed" from="TabContainer/Decor/ScrollContainer/GridContainer/Spider Webs" to="TabContainer" method="_on_spider_webs_pressed"]
[connection signal="pressed" from="TabContainer/Interactive/ScrollContainer/GridContainer/Coin" to="TabContainer" method="_on_coin_pressed"]
[connection signal="pressed" from="TabContainer/Interactive/ScrollContainer/GridContainer/Chest" to="TabContainer" method="_on_chest_pressed"]
[connection signal="pressed" from="TabContainer/Interactive/ScrollContainer/GridContainer/Ladder" to="TabContainer" method="_on_ladder_pressed"]
